WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91390
[Qt] REGRESSION (
r122720
): svg/filters/feSpecularLight-premultiplied.svg
https://bugs.webkit.org/show_bug.cgi?id=91390
Summary
[Qt] REGRESSION (r122720): svg/filters/feSpecularLight-premultiplied.svg
Zoltan Horvath
Reported
2012-07-16 07:46:13 PDT
After
http://trac.webkit.org/changeset/122720
I introduced a new regression. I'm going to skip it until fix.
Attachments
proposed patch
(2.76 KB, patch)
2012-07-17 05:24 PDT
,
Zoltan Horvath
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Horvath
Comment 1
2012-07-16 07:51:11 PDT
Skipped in
http://trac.webkit.org/changeset/122724
.
Zoltan Horvath
Comment 2
2012-07-17 05:24:06 PDT
Created
attachment 152742
[details]
proposed patch
Zoltan Herczeg
Comment 3
2012-07-17 05:25:27 PDT
Comment on
attachment 152742
[details]
proposed patch rs=me
WebKit Review Bot
Comment 4
2012-07-17 06:23:18 PDT
Comment on
attachment 152742
[details]
proposed patch Clearing flags on attachment: 152742 Committed
r122841
: <
http://trac.webkit.org/changeset/122841
>
WebKit Review Bot
Comment 5
2012-07-17 06:23:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug