[QT] REGRESSION (r122720): svg/filters/feSpecularLight-premultiplied.svg https://bugs.webkit.org/show_bug.cgi?id=91390

Reviewed by Zoltan Herczeg.

Fix the regression by using the proper imagetype conversion in ImageBuffer::platformTransformColorSpace.

The test is unskipped.

Source/WebCore:

* platform/graphics/qt/ImageBufferQt.cpp:
(WebCore::ImageBuffer::platformTransformColorSpace):

LayoutTests:

* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/109307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122841 268f45cc-cd09-0410-ab3c-d52691b4dbfc